static/css/styles.scss
---
---

/*!
 * zealdocs.org Style
 */
@import "zd";

@import url("https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic");

html {
  font-size: 62.5%;
}

body {
  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
	font-size: 1.6em;
	font-weight: 300;
	letter-spacing: .01em;
  line-height: 1.6;
}

.post h1 {
  margin-bottom: 0;
}

.post div.entry {
  padding-top: 15px;
}

#docset-list li {
  background-repeat: no-repeat;
  background-position: left center;
  padding-left: 20px;
  margin: 2px;
}

